--- a/GRCSPL/package.json
+++ b/GRCSPL/package.json
@@ -43,7 +43,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
-    "date-fns": "4.1.0",
+    "date-fns": "^3.6.0",
     "devtools-detect": "^4.0.2",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "^12.16.0",
@@ -52,10 +52,10 @@
     "mixpanel-browser": "^2.65.0",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
-    "react": "^19",
+    "react": "^18.2.0",
     "react-day-picker": "8.10.1",
     "react-devtools-detector": "^1.0.3",
-    "react-dom": "^19",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
@@ -69,8 +69,8 @@
   "devDependencies": {
     "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^22",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18.2.67",
+    "@types/react-dom": "^18.2.15",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
